--- a/TODO.txt
+++ b/TODO.txt
@@ -34,3 +34,37 @@ SEARCH BAR
 
 Additional Ideas:
 Wish list of movies for users
+
+-- FOR DIANE TO USE LATER
+
+<% @watched = MovieRating.where user_id: @user.id %>
+
+<% @avgrating =  MovieRating.select("avg(user_rating) as avg, count(user_rating) as count, movie_id").group("movie_id") %>
+
+<br>
+<br>
+
+
+<h2>Watched</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Movie</th>
+      <th>Average<br>Rating</th>
+      <th>Times Seen</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody style="border: 1px solid black">
+    <% @avgrating.each do |watch| %>
+      <% @movie = Movie.find_by id: watch.movie_id %>
+      <tr>
+        <td style="text-align: center"><%= @movie.name %></td>
+        <td style="text-align: center"><%= watch.avg %></td>
+        <td style="text-align: center"><%= watch.count %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
