--- a/TODO.txt
+++ b/TODO.txt
@@ -13,6 +13,8 @@ Trailers
 
 =========================================================================================
 
+https://www.checkli.com/checklists/view/68ce3e025ebe8c5598d50126cf40ab61
+
 a) Display all the information about a user-specified movie. That is, the user should select
  the name of the movie from a list, and the information as contained in the movie table
  should then be displayed on the screen.
@@ -33,6 +35,7 @@ Display directs in /movies/id
 Display movie_casts in /movies/id
 Display movie_roles in /movies/id
 Display sponsors in /movies/id
+
 Display movie_ratings in /movies/id
 
 Display movie_topics in /movies/id
@@ -58,7 +61,7 @@ Display directs in /topics/id
 Display sponsors in /topics/id
 
 Display movie_topics in /topics/id
-	SELECT movies.*
+	SELECT *
 	FROM movies
 	INNER JOIN movie_topics
 	ON movies.id = movie_topics.movie_id
@@ -88,7 +91,7 @@ Display movie_topics in /topics/id
 		  <tr>
 			<td><img src="<%= movie.poster %>" style="width: 75px"></td>
 			<td><%= movie.movie_name %></td>
-			<td id="td1"><%= movie.description %></td>
+			<td><%= movie.description %></td>
 			<td><%= movie.date_released %></td>
 			<td>
 			  <% if movie.duration.hour == 0 %><%= movie.duration.strftime('%Mm') %>
@@ -196,8 +199,57 @@ IN /USERS/ID, DISPLAY:
 		  <%= genre.genre_name %>
 		<% end %>
 		
-	used_devices
+>	used_devices
+		SELECT device_name
+		FROM devices
+		INNER JOIN used_devices
+		ON devices.id = used_devices.devices_id
+		WHERE used_devices.profile_id = @profile.id
+		
+		<% @devices = Device.joins(:used_devices).where(used_devices: { profile_id: @profile.id }) %>
+
+		<% @devices.each do |device| %>
+		  <%= devices.device_name %>
+		<% end %>
+	
 	movie_ratings
+		SELECT *
+		FROM movie_rating
+		WHERE movie_rating.user_id = @user.id
+		
+			SELECT name
+			FROM movies
+			WHERE movies.id = movie_rating.movie_id
+
+		<% @watched = MovieRating.where user_id: @user.id %>
+
+		<table>
+		  <thead>
+			<tr>
+			  <th>Movie</th>
+			  <th>Date Watched</th>
+			  <th>Rating</th>
+			  <th>Review</th>
+			  <th>Rating Created</th>
+			  <th colspan="3"></th>
+			</tr>
+		  </thead>
+
+		  <tbody>
+			<% @watched.each do |watch| %>
+			  <% @movie = Movie.find_by id: watch.movie_id %>
+			  <tr>
+				<td><%= @movie.movie_name %></a></td>
+				<td><%= watch.date_watched %></td>
+				<td><%= watch.user_rating %></td>
+				<td id="td1"><%= watch.review %></td>
+				<td><%= watch.updated_at %></td>
+				<td><%= link_to 'Edit', edit_movie_rating_path(watch) %></td>
+				<td><%= link_to 'Destroy', watch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			  </tr>
+			<% end %>
+		  </tbody>
+		</table>
 
 
 
@@ -205,7 +257,10 @@ IN /TOPICS/ID, DISPLAY:
 	movie_topics
 		c)
 
-IN /MOVIES/ID
+
+
+IN /MOVIES/ID, DISPLAY:
+
 	movie_topics
 		a), b), h), n)
 	directs
@@ -218,16 +273,24 @@ IN /MOVIES/ID
 		a), b), h), n)
 	movie_ratings
 		a), b), h), n)
-		
+
+
+
 IN /ACTORS/ID, DISPLAY:
+
 	movie_casts
 	actor_roles
-	
-IN /DIRECTORS/ID, DISPLAY:
-	directs
-	
-IN /STUDIOS/ID, DISPLAY:
-	sponsors
-	
 
-	
+
+
+IN /DIRECTORS/ID, DISPLAY:
+
+	directs
+
+
+
+IN /STUDIOS/ID, DISPLAY:
+
+	sponsors
+
+
