--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 THINGS WE COULD IMPLEMENT IN PROJECT SPECIFCATION:
 
 Get rid of password column in users
-Get rid of province column in profiles
 Change user_id column to profile_id in used_devices & movie_ratings
 
 MAKE SURE OF ACCESS OF PAGES ARE CORRECT TO CURRENT USER
@@ -36,12 +35,53 @@ Display movie_casts in /movies/id
 Display movie_roles in /movies/id
 Display sponsors in /movies/id
 
-Display movie_ratings in /movies/id ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-	SELECT *
+Display movie_ratings in /movies/id
+	SELECT avg(user_rating) as avg, count(id) as count, user_id
 	FROM movie_ratings
-	WHERE movie_ratings = @movie.id
+	ORDER BY count DESC
+	WHERE movie_ratings.movie_id = @movie.id
 	
+		SELECT email
+		FROM users
+		WHERE users.id = ^movie_rating.user_id
+		
+		SELECT review
+		FROM movie_ratings
+		WHERE movie_ratings.user_id = ^users.id AND movie_ratings.movie_id = @movie.id
+		
 	
+	<% @userwatched =  MovieRating.select("avg(user_rating) as avg, count(id) as count, user_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
+
+	<table>
+	  <thead>
+		<tr>
+		  <th>User</th>
+		  <th>Average<br>Rating</th>
+		  <th>Times Seen</th>
+		  <th>Reviews</th>
+		  <th colspan="3"></th>
+		</tr>
+	  </thead>
+
+	  <tbody>
+		<% @userwatched.each do |watch| %>
+		  <% @user = User.find_by id: watch.user_id %>
+		  <% @userreviews = MovieRating.where(movie_id: @movie.id, user_id: @user.id) %>
+		  <tr>
+			<td><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
+			<td><%= watch.avg %></td>
+			<td><%= watch.count %></td>
+			<td>
+			  <% @userreviews.each do |userreview| %>
+				<% if userreview.review != '' %>
+				  <%= userreview.review %><br>
+				<% end %>
+			  <% end %>
+			</td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
 
 Display movie_topics in /movies/id
 	SELECT genre_name 
@@ -99,7 +139,8 @@ Display movie_topics in /topics/id
 			<td><%= movie.description %></td>
 			<td><%= movie.date_released %></td>
 			<td>
-			  <% if movie.duration.hour == 0 %><%= movie.duration.strftime('%Mm') %>
+			  <% if movie.duration.hour == 0 %>
+				<%= movie.duration.strftime('%Mm') %>
 			  <% else %>
 				<%= movie.duration.strftime('%kh %Mm') %>
 			  <% end %>
@@ -190,7 +231,60 @@ Display movie_ratings in /topics/id
 =========================================================================================
 	
 IN /USERS/ID, DISPLAY:
-	profile ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+	profiles
+		SELECT *
+		FROM profiles
+		WHERE profile.user_id = @user.id
+		
+		<% @profile = Profile.find_by user_id: @user.id %>
+		
+		<%= link_to 'Edit Profile', edit_profile_path(@profile) %>
+		
+		<p>
+		  <strong>First Name:</strong>
+		  <%= @profile.first_name %>
+		</p>
+
+		<p>
+		  <strong>Last Name:</strong>
+		  <%= @profile.last_name %>
+		</p>
+
+		<p>
+		  <strong>Date of Birth:</strong>
+		  <%= @profile.date_of_birth %>
+		</p>
+
+		<p>
+		  <strong>Gender:</strong>
+		  <%= @profile.gender %>
+		</p>
+
+		<p>
+		  <strong>City:</strong>
+		  <%= @profile.city %>
+		</p>
+
+		<p>
+		  <strong>Province:</strong>
+		  <%= @profile.province %>
+		</p>
+
+		<p>
+		  <strong>Country:</strong>
+		  <%= @profile.country %>
+		</p>
+
+		<p>
+		  <strong>Occupation:</strong>
+		  <%= @profile.occupation %>
+		</p>
+
+		<p>
+		  <strong>Picture:</strong>
+		  <%= @profile.picture %>
+		</p>
+		
 	likes_topics
 		SELECT genre_name
 		FROM topics
@@ -224,7 +318,7 @@ IN /USERS/ID, DISPLAY:
 		
 			SELECT name
 			FROM movies
-			WHERE movies.id = movie_rating.movie_id
+			WHERE movies.id = ^movie_rating.movie_id
 
 		<% @watched = MovieRating.where user_id: @user.id %>
 
@@ -247,7 +341,7 @@ IN /USERS/ID, DISPLAY:
 				<td><%= @movie.movie_name %></a></td>
 				<td><%= watch.date_watched %></td>
 				<td><%= watch.user_rating %></td>
-				<td id="td1"><%= watch.review %></td>
+				<td><%= watch.review %></td>
 				<td><%= watch.updated_at %></td>
 				<td><%= link_to 'Edit', edit_movie_rating_path(watch) %></td>
 				<td><%= link_to 'Destroy', watch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
