--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ Get rid of password column in users
 
 FORMS FOR LIKES_TOPICS, MOVIE_RATINGS, ETC- ANYTHING WITH FOREIGN KEYS.
 MAKE SURE OF ACCESS OF PAGES ARE CORRECT TO CURRENT USER
+UPLOADING PICTURE FOR NEW USER
 VALIDATIONS FOR DATA
 RECOMMENDATIONS
 SEARCH BAR
@@ -38,6 +39,7 @@ Display sponsors in /movies/id
 Display movie_ratings in /movies/id
 	SELECT avg(user_rating) as avg, count(id) as count, profile_id
 	FROM movie_ratings
+	GROUP BY profile_id
 	ORDER BY count DESC
 	WHERE movie_ratings.movie_id = @movie.id
 		
@@ -49,10 +51,10 @@ Display movie_ratings in /movies/id
 		
 		SELECT review
 		FROM movie_ratings
-		WHERE movie_ratings.user_id = ^users.id AND movie_ratings.movie_id = @movie.id
+		WHERE movie_ratings.profile_id = ^movie_ratings.profile_id AND movie_ratings.movie_id = @movie.id
 		
 	
-	<% @watches =  MovieRating.select("avg(user_rating) as avg, count(id) as count, profile_id").group("user_id").order(count: :desc).where movie_id: @movie.id %>
+	<% @watches =  MovieRating.select("avg(user_rating) as avg, count(id) as count, profile_id").group("profile_id").order(count: :desc).where movie_id: @movie.id %>
 
 	<table>
 	  <thead>
@@ -227,7 +229,62 @@ Jane Doe may have rated terminator 1 as a 1, Terminator 2 as a 10 and Terminator
 Clearly, she changes her mind quite often!
 
 Display movie_ratings in /topics/id
-	SELECT 
+	SELECT *
+	FROM movies
+	INNER JOIN movie_topics
+	ON movies.id = movie_topics.movie_id
+	WHERE movie_topics.topic_id = @topic.id
+
+		SELECT max(user_rating) - min(user_rating) as diff, max(R.user_rating) as max, min(R.user_rating) as min, profile_id
+		FROM movie_ratings
+		GROUP BY profile_id
+		ORDER BY diff DESC
+		WHERE movie_ratings.movie_id = movie_topics.movie_id, movie_topics.topic_id = @topic.id
+		LIMIT 3
+		
+			SELECT email, id
+			FROM users
+			INNER JOIN profiles
+			ON users.id = profiles.user_id
+			WHERE profiles.id = ^movie_rating.profile_id
+			
+			SELECT name
+			FROM movie
+			INNER JOIN movie_ratings
+			ON movie.id = movie_ratings.movie_id
+			WHERE movie_ratings.rating = ^movie_rating.max
+	
+	<% @diverseusers = MovieRating.select("max(user_rating - min(user_rating) as diff, max(R.user_rating) as max, min(R.user_rating) as min, profile_id").group("profile_id").order(diff: :desc).where(movie_id: movie_topics.movie_id, movie_topics.topic_id = @topic.id) %>
+
+	<table>
+	  <thead>
+		<tr>
+		  <th>User</th>
+		  <th>Max Movie</th>
+		  <th>Rating</th>
+		  <th>Min Movie</th>
+		  <th>Rating</th>
+		  <th>Difference</th>
+		  <th colspan="3"></th>
+		</tr>
+	  </thead>
+
+	  <tbody>
+		<% @diverseusers.each do |diverseuser| %>
+		  <% @user = Users.joins(:profile).where(profile: { id: diverseuser.profile_id }).take %>
+		  <% @maxmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: diverseuser.max }) %>
+		  <% @minmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: diverseuser.min }) %>
+		  <tr>
+			<td><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
+			<td><%= @maxmovie.movie_name %></td>
+			<td><%= diverseuser.max %></td>
+			<td><%= @minmovie.movie_name %></td>
+			<td><%= diverseuser.min %></td>
+			<td><%= diverseuser.diff %></td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
 
 
 
@@ -396,14 +453,3 @@ IN /STUDIOS/ID, DISPLAY:
 	sponsors
 
 
-
-=========================================================================================
-
-SELECT MAX(R.user_rating) - MIN(R.user_rating) as diff
-FROM MOVIE_RATINGS R, MOVIE_TOPICS MT, TOPICS T
-WHERE R.movie_id = MT.movie_id
-	AND MT.topic_id = T.id
-	AND T.genre_name = 'Fantasy'
-GROUP BY R.user_id
-ORDER BY diff DESC
-LIMIT 3
