--- a/TODO.txt
+++ b/TODO.txt
@@ -69,7 +69,7 @@ Display movie_ratings in /movies/id
 
 	  <tbody>
 		<% @watches.each do |watch| %>
-		  <% @user = Users.joins(:profile).where(profile: { id: watch.profile_id }).take %>
+		  <% @user = User.joins(:profile).where(profiles: { id: watch.profile_id }).take %>
 		  <% @userreviews = MovieRating.where(movie_id: @movie.id, profile_id: watch.profile_id) %>
 		  <tr>
 			<td><a href="/users/<%= @user.id %>"><%= @user.email %></a></td>
@@ -229,32 +229,33 @@ Jane Doe may have rated terminator 1 as a 1, Terminator 2 as a 10 and Terminator
 Clearly, she changes her mind quite often!
 
 Display movie_ratings in /topics/id
-	SELECT *
-	FROM movies
-	INNER JOIN movie_topics
-	ON movies.id = movie_topics.movie_id
-	WHERE movie_topics.topic_id = @topic.id
 
-		SELECT max(user_rating) - min(user_rating) as diff, max(R.user_rating) as max, min(R.user_rating) as min, profile_id
-		FROM movie_ratings
-		GROUP BY profile_id
-		ORDER BY diff DESC
-		WHERE movie_ratings.movie_id = movie_topics.movie_id, movie_topics.topic_id = @topic.id
-		LIMIT 3
-		
-			SELECT email, id
-			FROM users
-			INNER JOIN profiles
-			ON users.id = profiles.user_id
-			WHERE profiles.id = ^movie_rating.profile_id
-			
-			SELECT name
-			FROM movie
-			INNER JOIN movie_ratings
-			ON movie.id = movie_ratings.movie_id
-			WHERE movie_ratings.rating = ^movie_rating.max
+	SELECT MAX(R.user_rating) - MIN(R.user_rating) as diff, MAX(R.user_rating) as max, MIN(R.user_rating) as min, R.profile_id
+	FROM MOVIE_RATINGS R, MOVIE_TOPICS MT, TOPICS T
+	WHERE R.movie_id = MT.movie_id
+		AND MT.topic_id = T.id
+		AND T.genre_name = 'Fantasy'
+	GROUP BY R.profile_id
+	ORDER BY diff DESC
+
+	SELECT max(user_rating) - min(user_rating) as diff, max(R.user_rating) as max, min(R.user_rating) as min, profile_id
+	FROM movie_ratings
+	GROUP BY profile_id
+	ORDER BY diff DESC
+	WHERE movie_ratings.movie_id = movie_topics.movie_id, movie_topics.topic_id = @topic.id
+	LIMIT 3
 	
-	<% @diverseusers = MovieRating.select("max(user_rating - min(user_rating) as diff, max(R.user_rating) as max, min(R.user_rating) as min, profile_id").group("profile_id").order(diff: :desc).where(movie_id: movie_topics.movie_id, movie_topics.topic_id = @topic.id) %>
+		SELECT email, id
+		FROM users
+		INNER JOIN profiles
+		ON users.id = profiles.user_id
+		WHERE profiles.id = ^movie_rating.profile_id
+		
+		SELECT name
+		FROM movie
+		INNER JOIN movie_ratings
+		ON movie.id = movie_ratings.movie_id
+		WHERE movie_ratings.rating = ^movie_rating.max
 
 	<table>
 	  <thead>
@@ -271,7 +272,7 @@ Display movie_ratings in /topics/id
 
 	  <tbody>
 		<% @diverseusers.each do |diverseuser| %>
-		  <% @user = Users.joins(:profile).where(profile: { id: diverseuser.profile_id }).take %>
+		  <% @user = User.joins(:profile).where(profiles: { id: diverseuser.profile_id }).take %>
 		  <% @maxmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: diverseuser.max }) %>
 		  <% @minmovie = Movie.joins(:movie_ratings).where(movie_ratings: { user_rating: diverseuser.min }) %>
 		  <tr>
