--- a/TODO.txt
+++ b/TODO.txt
@@ -452,5 +452,54 @@ IN /DIRECTORS/ID, DISPLAY:
 IN /STUDIOS/ID, DISPLAY:
 
 	sponsors
+		SELECT *
+		FROM movies
+		INNER JOIN sponsors ON movies.id = sponsors.movie_id
+		WHERE sponsors.studio_id = @studio.id
+		
+	<% @movies = Movie.joins(:sponsors).where(sponsors: { studio_id: @studio.id }) %>
+
+	<table>
+	  <thead>
+		<tr>
+		  <th></th>
+		  <th>Movie Name</th>
+		  <th>Description</th>
+		  <th>Date released</th>
+		  <th>Duration</th>
+		  <th>Language</th>
+		  <th>Subtitles</th>
+		  <th>Dubbed</th>
+		  <th>Country</th>
+		  <th>Age rating</th>
+		  <th colspan="3"></th>
+		</tr>
+	  </thead>
+
+	  <tbody>
+		<% @movies.each do |movie| %>
+		  <tr>
+			<td><img src="<%= movie.poster %>" style="width: 75px"></td>
+			<td><%= movie.movie_name %></td>
+			<td><%= movie.description %></td>
+			<td><%= movie.date_released %></td>
+			<td>
+			  <% if movie.duration.hour == 0 %>
+				<%= movie.duration.strftime('%Mm') %>
+			  <% else %>
+				<%= movie.duration.strftime('%kh %Mm') %>
+			  <% end %>
+			</td>
+			<td><%= movie.language %></td>
+			<td><%= movie.subtitles %></td>
+			<td><%= movie.dubbed %></td>
+			<td><%= movie.country %></td>
+			<td><%= movie.age_rating %></td>
+
+			<td><%= link_to 'Show', movie %></td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
 
 
