--- a/TODO.txt
+++ b/TODO.txt
@@ -444,13 +444,61 @@ IN /ACTORS/ID, DISPLAY:
 
 
 IN /DIRECTORS/ID, DISPLAY:
-
 	directs
+		SELECT *
+		FROM movies
+		INNER JOIN directs ON movies.id = directs.movie_id
+		WHERE directs.director_id = @director.id
+		
+	<% @movies = Movie.joins(:directs).where(directs: { director_id: @director.id }) %>
+
+	<table>
+	  <thead>
+		<tr>
+		  <th></th>
+		  <th>Movie Name</th>
+		  <th>Description</th>
+		  <th>Date released</th>
+		  <th>Duration</th>
+		  <th>Language</th>
+		  <th>Subtitles</th>
+		  <th>Dubbed</th>
+		  <th>Country</th>
+		  <th>Age rating</th>
+		  <th colspan="3"></th>
+		</tr>
+	  </thead>
+
+	  <tbody>
+		<% @movies.each do |movie| %>
+		  <tr>
+			<td><img src="<%= movie.poster %>" style="width: 75px"></td>
+			<td><%= movie.movie_name %></td>
+			<td><%= movie.description %></td>
+			<td><%= movie.date_released %></td>
+			<td>
+			  <% if movie.duration.hour == 0 %>
+				<%= movie.duration.strftime('%Mm') %>
+			  <% else %>
+				<%= movie.duration.strftime('%kh %Mm') %>
+			  <% end %>
+			</td>
+			<td><%= movie.language %></td>
+			<td><%= movie.subtitles %></td>
+			<td><%= movie.dubbed %></td>
+			<td><%= movie.country %></td>
+			<td><%= movie.age_rating %></td>
+
+			<td><%= link_to 'Show', movie %></td>
+		  </tr>
+		<% end %>
+	  </tbody>
+	</table>
+
 
 
 
 IN /STUDIOS/ID, DISPLAY:
-
 	sponsors
 		SELECT *
 		FROM movies
