Displaying roles and actors in movies!

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@ MAKE SURE OF ACCESS OF PAGES ARE CORRECT TO CURRENT USER
 UPLOADING PICTURE FOR NEW USER
 VALIDATIONS FOR DATA
 RECOMMENDATIONS
+ALPHABETICAL
 SEARCH BAR
 
 Trailers
