--- a/TODO.txt
+++ b/TODO.txt
@@ -48,55 +48,46 @@ WHERE casting_types.id = movie_casts.casting_type_id
 	AND movie_casts.movie_id = @movie.id
 	
 
-NOT USED, SEE BELOW!	Display movie_casts in /movies/id
-							SELECT first_name, last_name, casting_type_id
-							FROM actors
-							INNER JOIN movie_casts ON actors.id = movie_casts.actor_id
-							WHERE movie_casts.movie_id = @movie.id
-
-Display movie_roles in /movies/id
-	SELECT character_name
-	FROM roles
-	INNER JOIN movie_roles ON roles.id = movie_roles.role_id
-	WHERE movie_roles.movie_id = @movie.id
-	ORDER BY character_name ASC
+Display movie_casts in /movies/id
+	SELECT DISTINCT first_name, last_name
+	FROM actors
+	INNER JOIN movie_casts ON actors.id = movie_casts.actor_id
+	WHERE movie_casts.movie_id = @movie.id
+	ORDER BY casting_type_id ASC
 	
-		SELECT first_name, last_name
-		FROM actors
-		INNER JOIN actor_roles ON actors.id = actor_roles.actor_id
-		WHERE actor_roles.role_id = ^role.id
+		SELECT character_name
+		FROM roles
+		INNER JOIN actor_roles ON roles.id = actor_roles.role_id
+		INNER JOIN movie_roles ON roles.id = movie_roles.role_id
+		WHERE actor_roles.actor_id = ^actor.id
 		
-			SELECT cast_type
-			FROM casting_types
-			INNER JOIN movie_casts ON casting_types.id = movie_casts.casting_type_id
-ANY ^actor	WHERE movie_casts.movie_id = @movie.id AND movie_casts.actor_id = ^actor.id
-			LIMIT 1
-
-	<% @roles = Role.joins(:movie_roles).where(movie_roles: { movie_id: @movie.id }).order('character_name ASC') %>
-
+		SELECT cast_type
+		FROM casting_types
+		INNER JOIN movie_casts ON casting_types.id = movie_casts.casting_type_id
+		WHERE movie_casts.movie_id = @movie.id AND movie_casts.actor_id = ^actor.id
+		LIMIT 1
+	
+	<% @actors = Actor.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id }).order('casting_type_id ASC') %>
+	
 	<table>
 	  <thead>
 		<tr>
-		  <th>Character Name</th>
 		  <th>Actors</th>
+		  <th>Character Name</th>
 		  <th>Type</th>
 		  <th colspan="3"></th>
 		</tr>
 	  </thead>
 
 	  <tbody>
-		<% @roles.each do |role| %>
-		  <% @actors = Actor.joins(:actor_roles).where(actor_roles: { role_id: role.id }) %>
-		  <% @type = CastingType.joins(:movie_casts).where(movie_casts: { movie_id: @movie.id, actor_id: @actors.first.id }).take %>
+		<% @actors.each do |actor| %>
+		  <% @roles = Role.joins(:actor_roles).where(actor_roles: { actor_id: actor.id }) %>
+		  <% @type = CastingType.joins(:movie_casts).where(movie_casts: movie_id: @movie.id, actor_id: actor.id }) %>
 		  <tr>
-			<td><%= role.character_name %></td>
+			<td><%= actor.first_name %> <%= actor.last_name %></td>
 			<td>
-			  <% @actors.each do |actor| %>
-				<% if actor == @actors.last %>
-				  <%= actor.first_name %> <%= actor.last_name %>
-				<% else %>
-				  <%= actor.first_name %> <%= actor.last_name %>,
-				<% end %>
+			  <% @roles.each do |role| %>
+				<%= role.character_name %><br>
 			  <% end %>
 			</td>
 			<td><%= @type.cast_type %></td>
@@ -104,6 +95,12 @@ ANY ^actor	WHERE movie_casts.movie_id = @movie.id AND movie_casts.actor_id = ^ac
 		<% end %>
 	  </tbody>
 	</table>
+
+NOT USED!	Display movie_roles in /movies/id
+				SELECT character_name
+				FROM roles
+				INNER JOIN movie_roles ON roles.id = movie_roles.role_id
+				WHERE movie_roles.movie_id = @movie.id
 
 Display sponsors in /movies/id
 	SELECT studio_name
