--- a/TODO.txt
+++ b/TODO.txt
@@ -250,6 +250,16 @@ e) Display the information about the two actors that appeared the most often tog
 movies, as contained in your database.
 
 Display movie_casts in /home
+
+SELECT actor1, actor2, count(*) as movies
+FROM (
+	SELECT m1.actor_id as actor1, m2.actor_id as actor2, m1.movie_id as m1
+	FROM movie_casts m1, movie_casts m2
+	WHERE m1.actor_id > m2.actor_id AND m1.movie_id = m2.movie_id
+) as t
+GROUP BY actor1, actor2
+ORDER BY movies DESC
+
 	SELECT actor_id, count(actor_id) as count
 	FROM movie_casts
 	GROUP BY actor_id
