--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,7 @@
 THINGS WE COULD IMPLEMENT IN PROJECT SPECIFCATION:
 
 FORMS FOR LIKES_TOPICS, MOVIE_RATINGS, ETC- ANYTHING WITH FOREIGN KEYS.
-RECOMMENDATIONS
 
-
-Trailers
 Validations for data
 Get rid of password column in users
 Make sure of access of pages are correct to current user
@@ -343,6 +340,14 @@ together with the name(s) of the rater(s) who gave these ratings. (Here, Type Y 
 movie type of your choice, e.g. Horror or Romance.)
 
 Display movie_ratings in /topics
+	SELECT movie_name, avg(user_rating) as score
+	FROM movies
+	INNER JOIN movie_ratings ON movies.id = movie_ratings.movie_id
+	INNER JOIN movie_topics ON movies.id = movie_topics.movie_id
+	INNER JOIN topics ON movie_topics.topic_id = topics.id
+	WHERE genre_name = 'Action'
+	GROUP BY movie_name
+	ORDER BY score DESC
 
 
 
@@ -706,3 +711,28 @@ IN /STUDIOS/ID, DISPLAY:
 			<% end %>
 		  </tbody>
 		</table>
+
+
+
+=========================================================================================
+
+SELECT movie_name, date_released, r1.created_at, r1.user_rating, r2.user_rating, u1.email, u2.email
+FROM movies
+INNER JOIN movie_ratings AS r1 ON r1.movie_id = movies.id
+INNER JOIN movie_ratings AS r2 ON r1.movie_id = r2.movie_id
+INNER JOIN profiles as p1 ON p1.id = r1.profile_id
+INNER JOIN users AS u1 ON u1.id = p1.user_id
+INNER JOIN profiles as p2 ON p2.id = r2.profile_id
+INNER JOIN users AS u2 ON u2.id = p2.user_id
+WHERE u1.email = 'user1@movie.com' AND r2.user_rating < r1.user_rating
+ORDER BY r1.created_at
+
+SELECT p2.first_name, p2.last_name, u2.email, r1.user_rating, r2.user_rating, m1.movie_name
+FROM users u1
+INNER JOIN users as u2 ON u2.id <> u1.id
+INNER JOIN profiles as p1 ON p1.user_id = u1.id
+INNER JOIN profiles as p2 ON p2.user_id = u2.id
+INNER JOIN movie_ratings as r1 ON r1.profile_id = p1.id
+INNER JOIN movie_ratings as r2 ON r2.profile_id = p2.id
+INNER JOIN movies m1 ON r1.movie_id = m1.id
+WHERE p1.first_name = 'John' AND p1.last_name = 'Smith' AND r2.user_rating < r1.user_rating AND r1.movie_id = r2.movie_id
